# proofs-a-complex-equation-envelope

./: .gitignore  LIBRARY_INTEGRATION.md  README.md
Proof/: ComplexEnvelope.v  Proof_A_Complex_Equation_Envelope.html  proof.tex
Python/: Complex Equation Plotter (Conjugates).bat  Complex Equation Plotter (Conjugates).py  Complex Equation Plotter 2 (Conjugates).bat
Rocq/: .Makefile.d  .csdp.cache  .nra.cache  AXIOM_PROOFS_STATUS.md  COMPILATION_STATUS.md  COMPILATION_TEST_RESULTS.md  ComplexEnvelope.v  ComplexEnvelope_Coquelicot.v  ComplexEnvelope_Coquelicot_Example.v  GEOMETRIC_CONSTRUCTION.md  INSTALLATION.md  Makefile.conf  PLAN.md  PROOF_PROGRESS_SESSION.md  PROOF_STATUS.md  README.md  README_COQUELICOT.md  _CoqProject  build_coq.sh  coq-complex-envelope.opam  dune  dune-project  test_coquelicot.v  test_envelope_symmetric.v
